<resources>
    <string name="app_name">Therapeutic Game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Game for CSA</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Play</string>
    <string name="menu_gallery">Add Clients</string>
    <string name="menu_slideshow">Existing Clients</string>
    <string name="menu_tools">Write Letter</string>
    <string name="Mindfulness">Mindfulness</string>
    <string name="menu_send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeNote">Welcome to Therapeutic Game!!!</string>
    <string name="Request">Please Register for the first time user.</string>
    <string name="full_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in">Log In</string>
    <string name="DearMe">Dear Me,</string>
    <string name="textMessage">type message here...</string>
    <string name="textTo">email address!</string>
    <string name="question">How do you know when you feel worried?</string>
    <string name="game_instructions_body">As players move around the board, they will roll a die and move through the game based on the number that appears with each roll. Based on the die, players will land on a variety of categories. Players will answer the question or complete the action associated with the corresponding space. Clients are welcome to skip cards or actions that are not relevant or that they are not ready to address.</string>
    <string name="game_instructions_button">Game Instructions</string>
    <string name="game_Object_button">Object of the Game</string>
    <string name="game_Object_body">As each player moves through the game, points will be collected for each question card or action. The first player to gain a certain number of points (set by clinician) wins.</string>
    <string name="game_ToStart_button">To Start</string>
    <string name="game_ToStart_body">The game is designed to allow clinicians to tailor the game to their client’s needs as well as adjust for client input.</string>
    <string name="game_SafteyConcerns_button">Safety Concerns</string>
    <string name="game_SafetyConcerns_body">This game is meant to be used by trauma informed and healing centered mental health clinicians. This game should only be introduced after sufficient rapport between therapist and clinician have been built. 
    If the client is skipping numerous question cards or expressing discomfort, shifts in question card categories or reintroducing the game once more rapport and trust have been built may be necessary.
    </string>
    <string name="game_ClinicianPart_button">Clinician participation</string>
    <string name="game_ClinicianPart_body">Clinicians are expected to participate and play “The Game for CSA” with the client. However, clinicians should make it clear within the question card categories that they are answering within their clinical experience of what child survivors may be challenged with.
    Therapists who are survivors: It is not necessary or indicated for therapists to share their personal experiences with trauma or abuse in this game. Again, clinicians should be clear with the client that their responses are based on their clinical experiences/research/training. The decision to disclose any personal information should always be based on clinical goals and benefit to the client, rather than the clinician’s personal needs.
    </string>
    <string-array name="categories">
        <item>Anxiety</item>
        <item>Anger</item>
        <item>Post Traumatic Stress</item>
        <item>Depression</item>
        <item>Dissociation</item>
        <item>Sexual Concerns</item>
        <item>Wild Card</item> 
    </string-array>
    <string-array name="Anxiety">
        <item>Generalized anxiety, hyperarousal, and worry; specific fears; episodes of free-floating anxiety; and a sense of impending danger</item>
        <item>1) How do you know when you feel worried?</item>
        <item>2) Where do you feel worry in your body?</item>
        <item>3) How do you know when you feel scared?</item>
        <item>4) Where do you feel fear in your body?</item>
        <item>5) What is your greatest fear?</item>
        <item>6) What are the things that are scary to you?</item>
        <item>7) What are the things you worry about?</item>
        <item>8) Who helps you when you are scared?</item>
        <item>9) What helps you when you are scared?</item>
        <item>10) What would life be like if you did not worry anymore?</item>
        <item>11) Is the worry helpful or harmful?</item>
        <item>12) What is the difference between worry and fear?</item>
        <item>13) How often do you feel worry?</item>
        <item>14) How often do you feel fearful?</item>
        <item>15) Do you often worry that something bad will happen soon?</item>
    </string-array>
    <string-array name="Anger">
        <item>1) How do you know that you are angry?</item>
        <item>2) What actions make you angry?</item>
        <item>3) What thoughts make you angry?</item>
        <item>4) What happens in your body when you get angry?</item>
        <item>5) Who do you trust to talk to when you are angry?</item>
        <item>6) What helps you the most when you feel very angry?</item>
        <item>7) What helps the most when you are feeling somewhat angry?</item>
        <item>8) Does your anger ever make you feel like hurting yourself?</item>
        <item>9) Does your anger ever make you feel like hurting someone else?</item>
        <item>10) Who do you dislike most and why?</item>
        <item>11) When was the last time you raised your voice when you were angry?</item>
        <item>12) When was the last time you isolated yourself or avoided others when feeling angry?</item>
        <item>13) How would others describe you when you are angry?</item>
        <item>14) Does anyone in your life pick fights with you? Who?</item>
        <item>15) Do you pick fights with anyone in your life? Who?</item>
        <item>16) How long does it take to feel calm after getting very angry?</item>
        <item>17) Do you believe you are a mean person?</item>
        <item>18) Do you believe others think you are a mean person?</item>
    </string-array>
    <string-array name="Depression">
        <item>1) What makes you cry?</item>
        <item>2) When was the last time you cried?</item>
        <item>3) Do you like yourself?</item>
        <item>4) Do you believe others like you?</item>
        <item>5) Do you believe others enjoy spending time with you?</item>
        <item>6) Have you ever purposefully hurt yourself? When? How?</item>
        <item>7) What helps you when you are feeling sad?</item>
        <item>8) Who do you trust to talk to when you are feeling sad?</item>
        <item>9) What do you like about yourself?</item>
        <item>10) What makes you feel guilty?</item>
        <item>11) What makes you feel shameful?</item>
        <item>12) Have you ever blamed yourself for bad things that have happened to you?</item>
        <item>13) When do you feel lonely?</item>
        <item>14) What thoughts contribute to feelings of sadness?</item>
        <item>15) What actions contribute to feelings of sadness?</item>
        <item>16) When you feel sad, how long does the sadness usually last?</item>
        <item>17) Do you know anyone who has purposefully harmed themselves?</item>
        <item>18) Do you know anyone who has died by suicide?</item>
        <item>19) What are your beliefs regarding self-harm?</item>
        <item>20) What are your beliefs regarding suicide?</item>
    </string-array>
    <string-array name="PostTraumaticStress">
        <item>1) Are there people you avoid seeing?</item>
        <item>2) Are there things you avoid doing?</item>
        <item>3) What happens when you see someone who have been trying to avoid?</item>
        <item>4) What happens when you are asked to do something you have been trying to avoid?</item>
        <item>5) Do you ever have thoughts that are hard to get out of your head? What are they?</item>
        <item>6) When was the last time you had a bad dream?</item>
        <item>7) Tell me about the last bad dream you had.</item>
        <item>8) What do you do when you have difficult thoughts?</item>
        <item>9) What do you do when you have bad dreams?</item>
        <item>10) Do you ever try to avoid feeling sad? How?</item>
        <item>11) Do you every try to avoid feeling angry? How?</item>
        <item>12) Do you ever try to avoid feeling scared? How?</item>
        <item>13) What is your worst memory? Why?</item>
        <item>14) When do you notice difficult feelings or thoughts?</item>
        <item>15) Are memories of the abuse foggy or clear?</item>
    </string-array>
    <string-array name="Dissociation">
        <item>1) Do you daydream?</item>
        <item>2) What happens when you daydream?</item>
        <item>3) Do you ever feel as if you have lost periods of time?</item>
        <item>4) Would you say you are forgetful?</item>
        <item>5) What types of things do you forget?</item>
        <item>6) When do you notice you are most forgetful?</item>
        <item>7) Tell me a story you have created while daydreaming?</item>
        <item>8) Have you ever felt like you were outside of or separate from yourself?</item>
        <item>9) Have you ever desired or pretended to be someone else? Who?</item>
        <item>10) Have you ever pretended to be somewhere else? Where?</item>
        <item>11) Is it difficult to talk about emotions?</item>
        <item>12) Is it difficult to talk about the sexual abuse that occurred?</item>
        <item>13) Is it difficult to feel emotions?</item>
        <item>14) Do some emotions feel safer than others to access?</item>
        <item>15) Do you ever feel numb?</item>
    </string-array>
    <string-array name="SexualConcerns">
        <item>1) Are there places or experiences that trigger memories your sexual abuse? What are they?</item>
        <item>2) Are you fearful of sexual abuse occurring again?</item>
        <item>3) Do you ever feel to blame for the sexual abuse? Why?</item>
        <item>4) Do you still have to see your abuser?</item>
        <item>5) Do you think about sex? If so, what are the thoughts?</item>
        <item>6) Do you ever experience sexual feelings in your body?</item>
        <item>7) Do you ever feel like you have sexual impulses you cannot control?</item>
        <item>8) Do you ever feel like you have thoughts regarding sex that you cannot get out of your head?</item>
        <item>9) How do you feel when you hear others talking about sex?</item>
        <item>10) Are there safe areas of your body that others may touch?</item>
        <item>11) Are there boundaries you want to implement that may help you feel safer?</item>
        <item>12) Do you have particular fears regarding men or women?</item>
        <item>13) Do you believe that others intend to hurt you?</item>
    </string-array>
</resources>