<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_patients"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_existing_patients"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_write_letter"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/nav_mindfulness"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/Mindfulness" />


    </group>


</menu>
