<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    card_view:cardElevation="4dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SensingCard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <Button
            android:id="@+id/title_Gameinstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="#ffffff"
            android:background="@color/button"
            android:textSize="22sp"
            android:text="@string/game_instructions_button"
            tools:ignore="ExtraText">

        </Button>

        <TextView
            android:id="@+id/body_Gameinstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="#ffffff"
            android:text="@string/game_instructions_body"
            tools:ignore="ExtraText">

        </TextView>


        <Button
            android:id="@+id/ObjectofGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="#ffffff"
            android:background="@color/button"
            android:textSize="22sp"
            android:text="@string/game_Object_button"
            tools:ignore="ExtraText">
        </Button>

        <TextView
            android:id="@+id/ObjectofGame_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="#ffffff"
            android:text="@string/game_Object_body"
            tools:ignore="ExtraText">

        </TextView>

        <Button
            android:id="@+id/SafetyConcerns"
            android:onClick="SafetyConcernsPage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="#ffffff"
            android:background="@color/button"
            android:textSize="18sp"
            android:text="@string/game_SafteyConcerns_button"
            tools:ignore="ExtraText,OnClick">
        </Button>

        <Button
            android:id="@+id/Tostart"
            android:onClick="TostartPage"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="#ffffff"
            android:background="@color/button"
            android:textSize="18sp"
            android:text="@string/game_ToStart_button"
            tools:ignore="ExtraText,OnClick">
        </Button>

        <Button
            android:id="@+id/Clinicianpart"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@color/button"
            android:fontFamily="@font/roboto_slab_bold"
            android:onClick="ClinicianpartPage"
            android:text="@string/game_ClinicianPart_button"
            android:textColor="#ffffff"
            android:textSize="18sp"
            tools:ignore="ExtraText,OnClick">

        </Button>

    </LinearLayout>



</androidx.cardview.widget.CardView>